# vthumb

./: .gitignore  README.md  pyproject.toml
src/vthumb/: __main__.py  cli.py
tests/: test_cli.py
