[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vthumb"
dynamic = ["version"]
description = "Create thumbnail contact sheets from video files with FFmpeg."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "vthumb contributors" }]
keywords = ["ffmpeg", "thumbnail", "video", "cli"]
dependencies = [
    "rich>=13.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
vthumb = "vthumb.cli:main"

[project.urls]
Homepage = "https://github.com/aliffatulmf/python-vthumb"

[tool.hatch.version]
path = "src/vthumb/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vthumb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["vthumb"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=6.0",
]
